; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_fail.c_parse_number.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_fail.c_parse_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROB_DIGITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32*, i8*)* @parse_number to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @parse_number(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call i32 @strtol(i8* %12, i8** %7, i32 10)
  %14 = load i32*, i32** %5, align 8
  store i32 %13, i32* %14, align 4
  %15 = load i8*, i8** %7, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = icmp eq i8* %15, %16
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  %19 = load i8*, i8** %7, align 8
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp ne i32 %21, 46
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i8* null, i8** %4, align 8
  br label %90

24:                                               ; preds = %18, %3
  %25 = load i32*, i32** %6, align 8
  store i32 0, i32* %25, align 4
  %26 = load i8*, i8** %7, align 8
  %27 = load i8, i8* %26, align 1
  %28 = sext i8 %27 to i32
  %29 = icmp eq i32 %28, 46
  br i1 %29, label %30, label %88

30:                                               ; preds = %24
  store i32 0, i32* %9, align 4
  %31 = load i8*, i8** %7, align 8
  %32 = getelementptr inbounds i8, i8* %31, i32 1
  store i8* %32, i8** %7, align 8
  br label %33

33:                                               ; preds = %67, %30
  %34 = load i8*, i8** %7, align 8
  %35 = load i8, i8* %34, align 1
  %36 = call i64 @isdigit(i8 signext %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %72

38:                                               ; preds = %33
  %39 = load i8*, i8** %7, align 8
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = sub nsw i32 %41, 48
  store i32 %42, i32* %10, align 4
  %43 = load i32, i32* %9, align 4
  %44 = load i32, i32* @PROB_DIGITS, align 4
  %45 = sub nsw i32 %44, 2
  %46 = icmp slt i32 %43, %45
  br i1 %46, label %47, label %54

47:                                               ; preds = %38
  %48 = load i32*, i32** %6, align 8
  %49 = load i32, i32* %48, align 4
  %50 = mul nsw i32 %49, 10
  %51 = load i32, i32* %10, align 4
  %52 = add nsw i32 %50, %51
  %53 = load i32*, i32** %6, align 8
  store i32 %52, i32* %53, align 4
  br label %67

54:                                               ; preds = %38
  %55 = load i32, i32* %9, align 4
  %56 = load i32, i32* @PROB_DIGITS, align 4
  %57 = sub nsw i32 %56, 2
  %58 = icmp eq i32 %55, %57
  br i1 %58, label %59, label %66

59:                                               ; preds = %54
  %60 = load i32, i32* %10, align 4
  %61 = icmp sge i32 %60, 5
  br i1 %61, label %62, label %66

62:                                               ; preds = %59
  %63 = load i32*, i32** %6, align 8
  %64 = load i32, i32* %63, align 4
  %65 = add nsw i32 %64, 1
  store i32 %65, i32* %63, align 4
  br label %66

66:                                               ; preds = %62, %59, %54
  br label %67

67:                                               ; preds = %66, %47
  %68 = load i32, i32* %9, align 4
  %69 = add nsw i32 %68, 1
  store i32 %69, i32* %9, align 4
  %70 = load i8*, i8** %7, align 8
  %71 = getelementptr inbounds i8, i8* %70, i32 1
  store i8* %71, i8** %7, align 8
  br label %33

72:                                               ; preds = %33
  %73 = load i32, i32* %9, align 4
  %74 = icmp ne i32 %73, 0
  br i1 %74, label %76, label %75

75:                                               ; preds = %72
  store i8* null, i8** %4, align 8
  br label %90

76:                                               ; preds = %72
  br label %77

77:                                               ; preds = %83, %76
  %78 = load i32, i32* %9, align 4
  %79 = add nsw i32 %78, 1
  store i32 %79, i32* %9, align 4
  %80 = load i32, i32* @PROB_DIGITS, align 4
  %81 = sub nsw i32 %80, 2
  %82 = icmp slt i32 %78, %81
  br i1 %82, label %83, label %87

83:                                               ; preds = %77
  %84 = load i32*, i32** %6, align 8
  %85 = load i32, i32* %84, align 4
  %86 = mul nsw i32 %85, 10
  store i32 %86, i32* %84, align 4
  br label %77

87:                                               ; preds = %77
  br label %88

88:                                               ; preds = %87, %24
  %89 = load i8*, i8** %7, align 8
  store i8* %89, i8** %4, align 8
  br label %90

90:                                               ; preds = %88, %75, %23
  %91 = load i8*, i8** %4, align 8
  ret i8* %91
}

declare dso_local i32 @strtol(i8*, i8**, i32) #1

declare dso_local i64 @isdigit(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
